Removed unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,8 @@
 local.properties
 /app/src/main/AndroidManifest.xml
 /app/src/main/res/values/strings.xml
-/newstore
 /keystore/keystore
+/Screenshot_20251020_003110.png
+/Screenshot_20251020_003126.png
+/newstore
+/app/google-services.json
