--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,1 +1,10 @@
 /build
+/app/src/main/AndroidManifest.xml
+/app/src/main/res/values/strings.xml
+/keystore/keystore
+/Screenshot_20251020_003110.png
+/Screenshot_20251020_003126.png
+/newstore
+/app/google-services.json
+/keystore
+/app/src/main/res/values/strings.xml
